cleaned the messages.properties a bit (removed orphans) and added a TODO-comment
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8152 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -40,7 +40,6 @@ login.SplashLoginPanel.username=Username:
 login.SplashLoginPanel.password=Password:
 login.SplashLoginPanel.serverURL=ServerURL:
 login.LoginDialog.labelinitialContext=InitialContext Factory: 
-login.LoginDialog.labelsecurityProtocol=Security Protocol: 
 login.LoginDialog.labelsaveSettings=&Save settings
 login.LoginDialog.labelbutton.login=&Login
 login.LoginDialog.deleteButtonLabel=Delete
@@ -62,7 +61,6 @@ login.part.NeedLoginComposite.loginToUseView=You need to login to use this view\
 login.LoginDialog.errormissingServerURL=You must specify a server URL.
 login.SplashLoginPanel.securityProtocol=SecurityProtocol:
 login.JFireLoginHandler.loginSuccessful=Login successful
-login.LoginDialog.errormissingSecurityProtocol=You must specify a security protocol.
 login.LoginDialog.validNameMissingErrorMessage=You must specify a name if you want to save the login configuration.
 login.LoginDialog.loginConfigurationAlreadyExists=A login configuration with the given name already exists and will be overridden.
 login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s on %3$s
@@ -70,7 +68,6 @@ login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
 login.LoginStateStatusLineContribution.offlineStatus=Working offline
 login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck username, password and organisation.
 login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nErrormessage: %s 
-login.LoginDialog.errorofflineDecision=User decided to work offline
 login.LoginDialog.errormissingWorkstationID=You must specify a workstation
 login.LoginDialog.currentIdentityMarker=[Latest login]
 login.LoginDialog.recentLoginsComboLabel=Recent Logins: 
@@ -123,6 +120,45 @@ jdo.tree.JDOObjectTreeContentProvider.loading=Loading ...
 app.JFireActionBuilder.loginStatus=login status
 
 
+## TODO the above messages need review + prefix:
+##   * review, whether they're conform to https://www.jfire.org/modules/phpwiki/index.php/Coding%20rules%20and%20conventions
+##   * review, whether they refer to fields + methods that really exist
+##   * prefix the project "org.nightlabs.jfire.base" in order to get fully qualified class names which is crutial for refactorings
+##
+## 2007-08-21 Marco :-)
+
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.storeJob.name=Storing ConfigModule
+
+org.nightlabs.jfire.base.editlock.EditLockMan.acquireEditLockAsynchronously.job.name=Checking for EditLocks...
+
+org.nightlabs.jfire.base.j2ee.JMSQueueCombo.loadJob.name=Loading queues
+
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.descriptionTableColumn.text=Description
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.messagesTable.input_loading=loading ...
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.idTableColumn.text=ID
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.queueCombo.caption=Messages
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.loadJob.name=Loading Messages
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.summaryLabel.text=%d messages in queue
+
+org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedIn=Logout
+org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedOut=You are logged out. Click here to login.
+org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_offline=You are currently working offline. Click here to login.
+
+org.nightlabs.jfire.base.login.JFireLoginHandler.loginPanel.errMessage_authenticationFailed=Autentication failed\!
+org.nightlabs.jfire.base.login.JFireLoginHandler.loginPanel.errMessage_communicationError=Communication error\! %s
+
+org.nightlabs.jfire.base.overview.OverviewRegistry.fallBackCategory.name=Other
+org.nightlabs.jfire.base.overview.search.SpinnerSearchEntry.activeButton.text=Active
+org.nightlabs.jfire.base.overview.DefaultCategoryComposite.iconTableColumn.text=Icon
+org.nightlabs.jfire.base.overview.DefaultCategoryComposite.nameTableColumn.text=Text
+
+org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.job.name=Loading
+org.nightlabs.jfire.base.overview.search.AbstractQueryFilterComposite.activeButton.text=Active
+org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.applySearch.listComposite_loading=Loading\!
+org.nightlabs.jfire.base.overview.search.ApplySearchAction.text=Apply Search
+
+org.nightlabs.jfire.base.organisation.OrganisationList.loadJob.name=Load Organisations
+
 org.nightlabs.jfire.base.person.edit.blockbased.special.PersonPersonalDataWizardPage.displayName.caption=Display-name
 org.nightlabs.jfire.base.person.edit.blockbased.special.PersonPersonalDataWizardPage.autoCreateDisplayName.text=Autocreate display-name from person data
 org.nightlabs.jfire.base.person.edit.blockbased.special.PersonPersonalDataWizardPage.errorFirstNameMissing=A firstname has to be specified\!
@@ -158,36 +194,38 @@ org.nightlabs.jfire.base.prop.structedit.ImageStructFieldEditor.allowedExtension
 org.nightlabs.jfire.base.prop.structedit.ImageStructFieldEditor.addButton.text=+
 org.nightlabs.jfire.base.prop.structedit.ImageStructFieldEditor.removeButton.text=-
 
-org.nightlabs.jfire.base.prop.structedit.NumberStructFieldEditor.spinnerInfo=MaxSpinner: selection = 
 org.nightlabs.jfire.base.prop.structedit.NumberStructFieldEditComposite.digitsLabel.text=Digits: 
 org.nightlabs.jfire.base.prop.structedit.NumberStructFieldEditComposite.boundedLabel.text=\ \ \ Bounded: 
 org.nightlabs.jfire.base.prop.structedit.NumberStructFieldEditComposite.minimumLabel.text=\ Minimum: 
 org.nightlabs.jfire.base.prop.structedit.NumberStructFieldEditComposite.maximumLabel.text=Maximum:
+
 org.nightlabs.jfire.base.prop.structedit.RegexStructFieldEditor.regexLabel.text=Regular expression:
 
 org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldEditor.removeValueButton.text=-
 org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldEditor.addValueButton.text=+
 org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldEditor.possibleValuesLabel.text=Possible values:
+org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldEditor.newValue.text=<new>
 
 org.nightlabs.jfire.base.prop.structedit.StructEditor.messageBoxInvalidInput.message=The entered data is not valid.\n\nError: %s\n\nDo you want to discard all changes regarding this field?
 org.nightlabs.jfire.base.prop.structedit.StructEditor.messageBoxRemoveStructBlockConfirmation.text=Confirm deletion
 org.nightlabs.jfire.base.prop.structedit.StructEditor.messageBoxRemoveStructFieldConfirmation.text=Confirm deletion
 org.nightlabs.jfire.base.prop.structedit.StructEditor.loadStructJob.name=Fetching structure...
-org.nightlabs.jfire.base.prop.structedit.SelectionStructFieldEditor.newValue.text=<new>
-
 org.nightlabs.jfire.base.prop.structedit.StructEditor.newStructBlock.name=Change me
 org.nightlabs.jfire.base.prop.structedit.StructEditor.newStructField.name=Change me
 org.nightlabs.jfire.base.prop.structedit.StructEditor.messageBoxInvalidInput.text=Validation error
-org.nightlabs.jfire.base.prop.structedit.StructBlockEditorComposite.unique.text=Is unique?
 org.nightlabs.jfire.base.prop.structedit.StructEditor.messageBoxRemoveStructBlockConfirmation.message=Are you sure you want to delete the selected struct block and all of its contained struct fields?
 org.nightlabs.jfire.base.prop.structedit.StructEditor.messageBoxRemoveStructFieldConfirmation.message=Are you sure you want to delete \
 the struct field named '%s'?\n\n%d instances of this struct field will be also deleted if you continue."
+
+org.nightlabs.jfire.base.prop.structedit.StructBlockEditorComposite.unique.text=Is unique?
+
 org.nightlabs.jfire.base.prop.edit.blockbased.ExpandableBlocksEditor.getPropStructure.monitor.taskName=Loading propertySet structure
 org.nightlabs.jfire.base.prop.edit.blockbased.AbstractBlockBasedEditor.getPropStructure.monitor.taskName=Loading propertySet structure
 org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor.invalidInputMessageBox.message=The given input does not match the regular expression assigned to the field.\n\nThe regular expression can be seen in the tool tip of the text box.
-org.nightlabs.jfire.base.prop.edit.fieldbased.FieldBasedEditor.getPropStructure.monitor.taskName=Loading propertySet structure
 org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor.invalidInputMessageBox.text=Validation error
 org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor.valueText.toolTipText=Regex: %s
+
+org.nightlabs.jfire.base.prop.edit.fieldbased.FieldBasedEditor.getPropStructure.monitor.taskName=Loading propertySet structure
 
 org.nightlabs.jfire.base.prop.structedit.StructEditorComposite.structTree.input_loadingStructure=Loading structure...
 org.nightlabs.jfire.base.prop.structedit.StructEditorComposite.messageBoxStructModifiedSaveConfirmation.text=Current structure was modified.
@@ -211,33 +249,5 @@ org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction.toolTipText
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.text_up=Move element up
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.text_down=Move element down
 
-org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedIn=Logout
-org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedOut=You are logged out. Click here to login.
-org.nightlabs.jfire.base.login.JFireLoginHandler.loginPanel.errMessage_authenticationFailed=Autentication failed\!
 org.nightlabs.jfire.base.update.StartupUpdateManager.splashScreen.message_checkingForUpdates=Checking for updates...
-org.nightlabs.jfire.base.login.JFireLoginHandler.loginPanel.errMessage_communicationError=Communication error\! %s
 org.nightlabs.jfire.base.update.StartupUpdateManager.splashDialog.message_needRestart=The application has to be restarted to finish the update. Please press 'OK' to restart.
-org.nightlabs.jfire.base.editlock.EditLockMan.acquireEditLockAsynchronously.job.name=Checking for EditLocks...
-org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_offline=You are currently working offline. Click here to login.
-org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.storeJob.name=Storing ConfigModule
-
-org.nightlabs.jfire.base.overview.OverviewRegistry.fallBackCategory.name=Other
-org.nightlabs.jfire.base.overview.search.SpinnerSearchEntry.activeButton.text=Active
-org.nightlabs.jfire.base.overview.DefaultCategoryComposite.iconTableColumn.text=Icon
-org.nightlabs.jfire.base.overview.DefaultCategoryComposite.nameTableColumn.text=Text
-
-org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.job.name=Loading
-org.nightlabs.jfire.base.overview.search.AbstractQueryFilterComposite.activeButton.text=Active
-org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.applySearch.listComposite_loading=Loading\!
-org.nightlabs.jfire.base.overview.search.ApplySearchAction.text=Apply Search
-
-org.nightlabs.jfire.base.j2ee.JMSQueueCombo.loadJob.name=Loading queues
-
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.descriptionTableColumn.text=Description
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.messagesTable.input_loading=loading ...
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.idTableColumn.text=ID
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.queueCombo.caption=Messages
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.loadJob.name=Loading Messages
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.summaryLabel.text=%d messages in queue
-
-org.nightlabs.jfire.base.organisation.OrganisationList.loadJob.name=Load Organisations
