https://www.jfire.org/modules/bugs/view.php?id=199
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8154 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin_de.properties
+++ b/plugin_de.properties
@@ -2,92 +2,19 @@
 # Copyright (c) 2007 - www.NightLabs.org
 # **************************************
 
-
-# ****************************************************************************
-#                       Properties for the plugin.xml
-# ****************************************************************************
-
-# not in use?
-#productName=JFire
-# not in use?
-#views.category.name=General
-# not in use?
-#exceptionhandler.throwable.name=Exception Handler for Throwable
-
-appName=JFire
-swtAppName=JFire
+app.name=JFire
 aboutText=JFire\n\
 (c) Copyright NightLabs GmbH 2004-2007. Alle Rechte vorbehalten.\n\
 Besuchen Sie http://jfire.org\n\
 \n\
 Dieses Produkt enthält Software von Dritten. Details dazu finden sie auf der Webseite.
 
-perspectives.jfireWelcome.name=Willkommen
-perspectives.overview.name=Übersicht
+org.nightlabs.jfire.base.JFireWelcomePerspective.name=Willkommen
 
-views.overview.name=Übersicht
-views.overview.category.name=Übersicht
+loginMenu.label=Anmelden
+org.nightlabs.jfire.base.login.action.LoginAction.label=JFire &Anmeldung
+org.nightlabs.jfire.base.login.action.LoginAction.toolTip=JFire Anmeldung
 
-login.menu.label=Anmelden
-login.action.label=JFire &Anmeldung
-login.action.toolTip=JFire Anmeldung
+org.nightlabs.jfire.base.person.preferences.PersonManagementPreferencePage.name=Personenverwaltung
+org.nightlabs.jfire.base.person.preferences.PersonStructOrderPreferencePage.name=Struktur Anzeigereihenfolge
 
-person.preferences.pages.PersonManagement.name=Personenverwaltung
-person.preferences.pages.PersonStructOrder.name=Struktur Anzeigereihenfolge
-person.preferences.pages.PersonStructOrder.blockstable.col0=Struktur-Blöcke
-person.preferences.pages.PersonStructOrder.fieldstable.col0=Struktur-Felder
-
-# ****************************************************************************
-#                       Properties for the Classes
-# ****************************************************************************
-
-# **************************************
-# ThrowableHandler Dialog Messages
-# **************************************
-# not in default plugin.propertis - thus not in use?
-#extensionpoint.throwable.dialog.title=Ein Fehler ist aufgetreten
-#extensionpoint.throwable.dialog.expandText=Details (Stacktrace)
-
-# **************************************
-# Actions
-# **************************************
-# not used:
-#actions.login.icons.login=icons/Login.16x16.png
-#actions.login.icons.logout=icons/Logout.16x16.png
-actions.login.tooltip.login=JFire Anmeldung
-actions.login.tooltip.logout=Von JFire abmelden
-action.new.unnamed=Unbenannt
-
-# **************************************
-# Menus
-# **************************************
-menu.openrecentfiles.text=Letzte Dateien
-
-# **************************************
-# Person Management
-# **************************************
-person.preferences.pages.PersonStructOrder.blockstable.col0=Struktur-Blöcke
-person.preferences.pages.PersonStructOrder.fieldstable.col0=Struktur-Felder
-
-person.search.result.table.col0=Person
-
-person.edit.wizard.pages.PersonalDataPage.labels.displayName=Angezeigename
-person.edit.wizard.pages.PersonalDataPage.labels.autoCreateDisplayName=Anzeigename automatisch aus Personendaten erstellen
-person.edit.wizard.pages.PersonalDataPage.errormessage.specifyName=Geben Sie einen Namen an
-person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=Geben Sie einen Vornamen an
-
-
-
-# **************************************
-# LanguageWatcher
-# **************************************
-language.watcher.restartdialog.title=Neustart in bevorzugter Sprache
-language.watcher.restartdialog.message.startedWith=JFire wurde mit folgender Sprache gestartet:
-language.watcher.restartdialog.message.userPrefered=\nIhre bevorzugte Sprache ist 
-language.watcher.restartdialog.message.question=Soll JFire mit Ihrer bevorzugten Sprache neu gestartet werden?
-
-# **************************************
-# Update
-# **************************************
-update.message.checkingForUpdates=Updates werden untersucht...
-update.message.pleaseRestart=Die Anwendung muss neu gestarted werden um die Aktualisierung abzuschließen. Klicken Sie auf 'OK' um neu zu starten.
