--- a/src/org/nightlabs/jfire/base/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages_de.properties
@@ -1,48 +1,48 @@
-config.AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=Die Gruppeneinstellungen verbieten Konfigurationsänderungen
-config.AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Diese Konfiguration darf überschrieben werden.
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=Die Gruppeneinstellungen verbieten Konfigurationsänderungen
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Diese Konfiguration darf überschrieben werden.
 
-security.UserTable.userID=Benutzer ID
-security.UserTable.name=Name
-security.UserTable.description=Beschreibung
-security.UserTable.userType=Benutzer Typ
-security.UserTable.changeDT=Geändert
+org.nightlabs.jfire.base.security.UserTable.userID=Benutzer ID
+org.nightlabs.jfire.base.security.UserTable.name=Name
+org.nightlabs.jfire.base.security.UserTable.description=Beschreibung
+org.nightlabs.jfire.base.security.UserTable.userType=Benutzer Typ
+org.nightlabs.jfire.base.security.UserTable.changeDT=Geändert
 
-security.UserSearchDialog.Search=Suchen
-security.UserSearchDialog.SearchUser=Benutzer suchen
-security.UserSearchComposite.name=Name
-security.UserSearchComposite.userID=Benutzer ID
-security.UserSearchComposite.userType=Benutzer Typ
-security.UserSearchComposite.LoadingEvent=Loading Event
+org.nightlabs.jfire.base.security.UserSearchDialog.Search=Suchen
+org.nightlabs.jfire.base.security.UserSearchDialog.SearchUser=Benutzer suchen
+org.nightlabs.jfire.base.security.UserSearchComposite.name=Name
+org.nightlabs.jfire.base.security.UserSearchComposite.userID=Benutzer ID
+org.nightlabs.jfire.base.security.UserSearchComposite.userType=Benutzer Typ
+org.nightlabs.jfire.base.security.UserSearchComposite.LoadingEvent=Loading Event
 
-login.LoginDialog.labellogin=Anmeldung
-login.LoginDialog.labeluser=Benutzername: 
-login.LoginDialog.labelpass=Passwort: 
-login.LoginDialog.labelworkstation=Arbeitsplatz:
-login.LoginDialog.titleAreaMessage=Geben Sie Ihre Benutzerdaten ein und klicken sie auf "Anmelden" oder arbeiten Sie Offline
-login.LoginDialog.tryingLogin=Versuche Anmeldung...
-login.LoginDialog.labelorganisation=Organisation: 
-login.LoginDialog.labelserverURL=Server URL: 
-login.LoginDialog.authentication=Authentifizierung...
-login.LoginDialog.titleAreaTitle=Bitte melden Sie sich an
-login.LoginDialog.labelinitialContext=InitialContext Factory: 
-login.LoginDialog.labelsaveSettings=&Einstellungen speichern
-login.LoginDialog.labelbutton.login=&Anmelden
-login.LoginDialog.labelbutton.offline=&Offline arbeiten
-login.LoginDialog.errormissingUserID=Geben Sie einen Benutzernamen an.
-login.LoginDialog.errorSaveConfig=Die Konfiguration konnte nicht gespeichert werden\!
-login.LoginDialog.errorAppend=\n%1$s: %2$s
-login.LoginDialog.errormissingOrganisationID=Geben Sie eine Organisation an.
-login.LoginDialog.errormissingContextFactory=Geben Sie die InitialContext Factory an.
-login.LoginDialog.errormissingServerURL=Geben Sie eine Server URL an.
-login.LoginDialog.errorauthenticationFailed=Authentifizierung fehlgeschlagen.\nÜberprüfen Sie Benutzername, Passwort und Organisation.
-login.LoginDialog.errorcommunicatinError=Kommunikationsfehler! Überprüfen Sie die Server URL.\nFehlermeldung: %s
-login.LoginDialog.errormissingWorkstationID=Bitte geben Sie einen Arbeitsplatz an.
+org.nightlabs.jfire.base.login.LoginDialog.labellogin=Anmeldung
+org.nightlabs.jfire.base.login.LoginDialog.labeluser=Benutzername: 
+org.nightlabs.jfire.base.login.LoginDialog.labelpass=Passwort: 
+org.nightlabs.jfire.base.login.LoginDialog.labelworkstation=Arbeitsplatz:
+org.nightlabs.jfire.base.login.LoginDialog.titleAreaMessage=Geben Sie Ihre Benutzerdaten ein und klicken sie auf "Anmelden" oder arbeiten Sie Offline
+org.nightlabs.jfire.base.login.LoginDialog.tryingLogin=Versuche Anmeldung...
+org.nightlabs.jfire.base.login.LoginDialog.labelorganisation=Organisation: 
+org.nightlabs.jfire.base.login.LoginDialog.labelserverURL=Server URL: 
+org.nightlabs.jfire.base.login.LoginDialog.authentication=Authentifizierung...
+org.nightlabs.jfire.base.login.LoginDialog.titleAreaTitle=Bitte melden Sie sich an
+org.nightlabs.jfire.base.login.LoginDialog.labelinitialContext=InitialContext Factory: 
+org.nightlabs.jfire.base.login.LoginDialog.labelsaveSettings=&Einstellungen speichern
+org.nightlabs.jfire.base.login.LoginDialog.labelbutton.login=&Anmelden
+org.nightlabs.jfire.base.login.LoginDialog.labelbutton.offline=&Offline arbeiten
+org.nightlabs.jfire.base.login.LoginDialog.errormissingUserID=Geben Sie einen Benutzernamen an.
+org.nightlabs.jfire.base.login.LoginDialog.errorSaveConfig=Die Konfiguration konnte nicht gespeichert werden\!
+org.nightlabs.jfire.base.login.LoginDialog.errorAppend=\n%1$s: %2$s
+org.nightlabs.jfire.base.login.LoginDialog.errormissingOrganisationID=Geben Sie eine Organisation an.
+org.nightlabs.jfire.base.login.LoginDialog.errormissingContextFactory=Geben Sie die InitialContext Factory an.
+org.nightlabs.jfire.base.login.LoginDialog.errormissingServerURL=Geben Sie eine Server URL an.
+org.nightlabs.jfire.base.login.LoginDialog.errorauthenticationFailed=Authentifizierung fehlgeschlagen.\nÜberprüfen Sie Benutzername, Passwort und Organisation.
+org.nightlabs.jfire.base.login.LoginDialog.errorcommunicatinError=Kommunikationsfehler! Überprüfen Sie die Server URL.\nFehlermeldung: %s
+org.nightlabs.jfire.base.login.LoginDialog.errormissingWorkstationID=Bitte geben Sie einen Arbeitsplatz an.
 
-login.Login.errorUnhandledExceptionMessage=Während der Anmeldung trat ein Fehler auf.
+org.nightlabs.jfire.base.login.Login.errorUnhandledExceptionMessage=Während der Anmeldung trat ein Fehler auf.
 
-entity.tree.ActiveJDOEntityTreeCategory.loadingData=Daten werden geladen...
+org.nightlabs.jfire.base.entity.tree.ActiveJDOEntityTreeCategory.loadingData=Daten werden geladen...
 
-tree.ActiveTreeContentProvider.loadingNewJDOObjects=Lade neue JDO Objekte
-tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Lade geänderte JDO Objekte
-tree.ActiveTreeContentProvider.loadingDataJob=Daten werden geladen...
-tree.ActiveTreeContentProvider.loadingData=Daten werden geladen...
+org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingNewJDOObjects=Lade neue JDO Objekte
+org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Lade geänderte JDO Objekte
+org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingDataJob=Daten werden geladen...
+org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingData=Daten werden geladen...
