refactorings for legalentity/person search
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8416 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -206,16 +206,16 @@ org.nightlabs.jfire.base.person.preferences.PersonStructOrderComposite.fieldUpBu
 
 org.nightlabs.jfire.base.prop.search.PropertySetSearchFilterItemEditor.fillSearchFieldCombo.job.name=Load search fields
 
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProvider.searchButton.text=&Search
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProvider.searchButton.text=&Search
 
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.name.caption=Name
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.personID.caption=PersonID
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.address.caption=Address
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.postcode.caption=PostCode
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.city.caption=City
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.phone.caption=Phone
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.email.caption=EMail
-org.nightlabs.jfire.base.prop.search.StaticPropertySetSearchFilterProviderComposite.searchButton.text=Search
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.name.caption=Name
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.personID.caption=PersonID
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.address.caption=Address
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.postcode.caption=PostCode
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.city.caption=City
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.phone.caption=Phone
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.email.caption=EMail
+org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.searchButton.text=Search
 
 org.nightlabs.jfire.base.prop.structedit.AbstractStructFieldEditor.fieldNameEditor.caption=Field name:
 
