--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -27,10 +27,6 @@ org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.editLockWarning=
 
 org.nightlabs.jfire.base.entity.tree.ActiveJDOEntityTreeCategory.loadingData=Loading data...
 
-org.nightlabs.jfire.base.login.JFireLoginHandler.loginSuccessful=Login successful
-org.nightlabs.jfire.base.login.JFireLoginHandler.tryToLogin=Try to log in ...
-org.nightlabs.jfire.base.login.JFireLoginHandler.workOffline=Work OFFLINE
-
 org.nightlabs.jfire.base.login.Login.authenticationJob=Authentication...
 org.nightlabs.jfire.base.login.Login.errorUnhandledExceptionMessage=An error occured while verifying login.
 org.nightlabs.jfire.base.login.Login.rebootDialogMessage=Your class loading configuration was changed in order to make all published server classes available. A restart is required.
@@ -69,21 +65,6 @@ org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel=Identity Name:
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s on %3$s
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.offlineStatus=Working offline
-
-org.nightlabs.jfire.base.login.SplashLoginPanel.login=Login
-org.nightlabs.jfire.base.login.SplashLoginPanel.quit=Quit
-org.nightlabs.jfire.base.login.SplashLoginPanel.pleaseLogin=Welcome to JFire\! Please log in now.
-org.nightlabs.jfire.base.login.SplashLoginPanel.workstation=Workstation:
-org.nightlabs.jfire.base.login.SplashLoginPanel.workOffline=Work OFFLINE
-org.nightlabs.jfire.base.login.SplashLoginPanel.username=Username:
-org.nightlabs.jfire.base.login.SplashLoginPanel.password=Password:
-org.nightlabs.jfire.base.login.SplashLoginPanel.serverURL=ServerURL:
-org.nightlabs.jfire.base.login.SplashLoginPanel.organisation=Organisation:
-org.nightlabs.jfire.base.login.SplashLoginPanel.saveSettings=Save settings to config
-org.nightlabs.jfire.base.login.SplashLoginPanel.details=Details
-org.nightlabs.jfire.base.login.SplashLoginPanel.initialContextFactory=InitialContextFactory:
-org.nightlabs.jfire.base.login.SplashLoginPanel.securityProtocol=SecurityProtocol:
-org.nightlabs.jfire.base.login.SplashLoginPanel.recentLoginsComboLabel=Recent Logins:
 
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.login=Login
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginToUseView=You need to login to use this view\!
@@ -135,26 +116,26 @@ org.nightlabs.jfire.base.jdo.tree.ActiveJDOObjectTreeController.loadingDataJob=L
 org.nightlabs.jfire.base.jdo.tree.JDOObjectTreeContentProvider.loading=Loading ...
 
 
-## TODO the above messages were localised before we defined
-##   * https://www.jfire.org/modules/phpwiki/index.php/Coding%20rules%20and%20conventions
-##   * https://www.jfire.org/modules/bugs/view.php?id=197
-##
-## I localised only the below messages while the above messages still need review. For example
-##
-##   org.nightlabs.jfire.base.login.part.NeedLoginComposite.login
-##
-## should be
-##
-##   org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginButton.text
-##
-## or at least
-##
-##   org.nightlabs.jfire.base.login.part.NeedLoginComposite.login.text
-##
-## because it is currently not clear that it is the text - it could be the tooltip. Unfortunately, I don't
-## have time to review/fix the above message keys now. Hence, I leave them as they currently are.
-##
-## 2007-08-21 Marco :-)
+# TODO the above messages were localised before we defined
+#   * https://www.jfire.org/modules/phpwiki/index.php/Coding%20rules%20and%20conventions
+#   * https://www.jfire.org/modules/bugs/view.php?id=197
+#
+# I localised only the below messages while the above messages still need review. For example
+#
+#   org.nightlabs.jfire.base.login.part.NeedLoginComposite.login
+#
+# should be
+#
+#   org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginButton.text
+#
+# or at least
+#
+#   org.nightlabs.jfire.base.login.part.NeedLoginComposite.login.text
+#
+# because it is currently not clear that it is the text - it could be the tooltip. Unfortunately, I don't
+# have time to review/fix the above message keys now. Hence, I leave them as they currently are.
+#
+# 2007-08-21 Marco :-)
 
 
 org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.storeJob.name=Storing ConfigModule
@@ -173,9 +154,6 @@ org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.summaryLabel.text=%d messages 
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedIn=Logout
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedOut=You are logged out. Click here to login.
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_offline=You are currently working offline. Click here to login.
-
-org.nightlabs.jfire.base.login.JFireLoginHandler.loginPanel.errMessage_authenticationFailed=Autentication failed\!
-org.nightlabs.jfire.base.login.JFireLoginHandler.loginPanel.errMessage_communicationError=Communication error\! %s
 
 org.nightlabs.jfire.base.overview.OverviewRegistry.fallBackCategory.name=Other
 org.nightlabs.jfire.base.overview.search.SpinnerSearchEntry.activeButton.text=Active
@@ -293,6 +271,3 @@ org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.text_up=
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.text_down=Move element down
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.toolTipText_up=Moves the selected Struct element one position up.
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.toolTipText_down=Moves the selected Struct element one position down.
-
-org.nightlabs.jfire.base.update.StartupUpdateManager.splashScreen.message_checkingForUpdates=Checking for updates...
-org.nightlabs.jfire.base.update.StartupUpdateManager.splashDialog.message_needRestart=The application has to be restarted to finish the update. Please press 'OK' to restart.
